fixed misaligned name in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,15 +241,15 @@ font-size: 24px;
 
 #hero .hero-container {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   min-width: 300px;
 }
 
 #hero h1 {
-  margin: 0 0 20px 0;
-  font-size: 65px;
+  margin: 0 0 40px 0;
+  font-size: 30px !important;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 50px;
   color: #fff;
   
 }
